[package]
name = "umbral-cli"
description = "The command-line tool for umbral. Library exposes `dispatch(app)` for user binaries; binary `umbral` is a global scaffolding tool (startproject / startapp)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Two artefacts:
# - lib: `umbral_cli::dispatch(app)` is what user binaries call to host the
#   management subcommands (serve / migrate / makemigrations / ...).
# - bin `umbral`: the global scaffolding tool installed via
#   `cargo install umbral-cli` (handles startproject / startapp).
[lib]
name = "umbral_cli"
path = "src/lib.rs"

[[bin]]
name = "umbral"
path = "src/main.rs"

[dependencies]
# Shared casing helpers (pascal_case_from_ident for scaffold).
umbral-casing = { path = "../umbral-casing", version = "0.0.7" }
umbral = { path = "../umbral", version = "0.0.7" }
# umbral-cli is internal — depending on umbral-core directly is fine. We
# reach for `umbral_core::settings::get()` to read the bind_addr from
# the live settings after `App::build` published them.
umbral-core = { path = "../umbral-core", version = "0.0.7" }
# `macros` enables `#[tokio::main]`; `rt-multi-thread` is the runtime the
# attribute expands to. No other tokio features are needed at M0.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `App::serve` emits a `tracing::info!` line on bind. Installing a subscriber
# here turns that into visible stdout so an operator can see the server is up.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Raw sqlx for the demo seed-data path (CREATE TABLE + INSERT before
# App::build()). umbral-cli is a framework-internal binary, so depending on
# sqlx here doesn't violate the "users only depend on the umbral facade" rule:
# umbral-cli is part of umbral, not a downstream user crate.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# `derive` so the subcommand enum picks up Parser/Subcommand impls. The
# CLI is the only place clap shows up; the facade stays free of it.
clap = { version = "4", features = ["derive"] }
# CSV parsing for the `importcsv` command (#61). Same crate the REST
# plugin uses for the `?format=csv` export, so import/export share quoting
# / escaping behaviour.
csv = "1"

[dev-dependencies]
tempfile = "3"
# For the plugin-command dispatch smoke test in tests/dispatch_smoke.rs.
async-trait = "0.1"
