[package]
name = "umbral-core"
description = "umbral internals: ORM, migrations, routing, DB backends, the Plugin trait. Do not depend on this directly; use the `umbral` facade."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Shared casing helpers (to_snake_case, pascal_case variants).
umbral-casing = { path = "../umbral-casing", version = "0.0.4" }
axum = "0.8"
# tower is the Service/Layer trait core that axum builds on. We need
# it as a regular (not dev) dep because the trailing-slash redirect
# layer in `crate::slash` implements `tower::Layer` + `tower::Service`.
tower = { version = "0.5", default-features = false }
# tower-http's `catch-panic` is what powers `AppBuilder::
# server_error_template` — a middleware that converts a panicking
# handler into a rendered template response instead of a process-level
# panic. Cheap to add; we'd want it eventually for static-files and
# trace support anyway.
# `fs` powers the unified static pipeline's file serving (ServeFile:
# Content-Type, ETag, range requests, If-Modified-Since) so the static
# handler reads a file off disk through ONE place
# (`crate::static_files::serve_file`, re-exported as
# `umbral::static_files::serve_file`) rather than hand-rolling MIME /
# range / conditional requests. Plugins that serve a single file can
# reuse it too.
tower-http = { version = "0.6", default-features = false, features = ["catch-panic", "cors", "fs", "compression-gzip", "compression-br", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
# Markdown rendering for the `| markdown` template filter (features.md
# #4). pulldown-cmark is the CommonMark + GFM parser; ammonia
# sanitizes the generated HTML so user-supplied markdown can't smuggle
# <script>/onerror=/etc. into a rendered page (secure-by-default).
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "4"
# syntect: server-side syntax highlighting for fenced code blocks in the
# `markdown` filter. default-features off + `default-fancy` selects the
# pure-Rust fancy-regex backend (no C/onig dep) with the bundled default
# syntaxes + themes. See docs/superpowers/specs/2026-06-15-markdown-syntax-highlighting-design.md
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive", "string"] }
async-trait = "0.1"
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
sea-query = { version = "0.32", features = ["with-json", "with-ipnetwork", "with-mac_address", "with-rust_decimal"] }
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite", "sqlx-postgres", "with-chrono", "with-uuid", "with-json", "with-ipnetwork", "with-mac_address", "with-rust_decimal"] }
serde = { version = "1", features = ["derive"] }
# JSON serde for migration files (Snapshot + MigrationFile) and snapshot
# hashing input.
serde_json = "1"
# x-www-form-urlencoded body parsing for the `Form<T>` extractor
# (gaps2 #19). axum::extract::Form uses the same crate internally;
# we bind it directly because we lift to a HashMap before handing
# to the validator.
serde_urlencoded = "0.7"
# SHA-256 for snapshot_hash drift detection in the umbral_migrations
# tracking table.
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio", "chrono", "uuid", "json", "ipnetwork", "mac_address", "rust_decimal"] }
# BUG-10: NUMERIC field type backed by `rust_decimal::Decimal`. The
# sqlx + sea-query features above enable Encode/Decode/Type; this
# direct dep is so user code (and generated `models.rs` from
# inspectdb) can name the type without going through sqlx's
# transitive re-export.
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
# Postgres network address types — Phase 4.4. `ipnetwork::IpNetwork`
# is the Rust type for both INET and CIDR (the latter is just a
# constraint-restricted host address). The sqlx ipnetwork feature
# above enables Decode/Encode/Type; this direct dep is so user code
# (and the generated `models.rs` from inspectdb) can name the type
# without depending on sqlx's transitive re-export.
ipnetwork = { version = "0.20", features = ["serde"] }
# Postgres MACADDR — Phase 4.4. The `mac_address::MacAddress` type
# pairs with sqlx's `mac_address` feature.
mac_address = { version = "1", features = ["serde"] }
# Jinja2-compatible template engine. Runtime templates so admin pages can
# be overridden by placing a same-named file higher in the search path,
# per the outline at docs/specs/outlines/templates.md. Default features
# only; we don't need debug rendering or speedups.
minijinja = "2"
# gaps2 #19 follow-up — `#[form(regex = "...")]` + `#[form(phone)]`
# attribute validators. `regex` is already a transitive dep of the
# tracing-subscriber / chrono-tz family; pinning it directly here
# keeps the form Validator pipeline self-contained.
regex = "1"
# `toml::Value` is the storage type for `Settings.extra`. Figment
# pulls toml in transitively but doesn't re-export it; the direct dep
# keeps the public API of `Settings` stable when figment internals
# move.
toml = "0.8"
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v7"] }
# multipart/form-data body parsing for file uploads (FileField/ImageField,
# the admin's create/update on multipart POSTs). multer is the same
# streaming multipart parser axum uses internally for its `Multipart`
# extractor; we bind it directly so `crate::web::multipart` can parse a
# raw body into text fields + file parts without going through axum's
# extractor (the admin reads the body as bytes itself). `bytes` is the
# Bytes type multer's stream constructor consumes; `futures-util` wraps a
# single Bytes chunk in a one-item stream for that constructor. Both are
# already transitive deps of axum/tower; naming them directly lets the
# multipart module reference `bytes::Bytes` / `futures_util::stream`.
multer = "3"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# `Masked<T>` field encryption (GDPR encrypt-at-rest). crypto_box is the
# RustCrypto X25519 + XSalsa20-Poly1305 box primitive; the module composes
# it into an anonymous-sender ("sealed box") scheme — encrypt with a public
# key, decrypt with the private key. base64 encodes the ciphertext for the
# TEXT column + the env-var keypair; rand_core::OsRng is the CSPRNG for the
# ephemeral keypair + nonce.
crypto_box = { version = "0.9", features = ["std"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
# figment::Jail (for env-var and toml file sandboxing in tests) lives behind
# the "test" feature.
figment = { version = "0.10", features = ["test"] }
# `stream::iter` to synthesize streams in the streaming-response tests
# (feature #70). It's also a normal dep, but integration tests are a
# separate crate and only see dev-deps; the full feature set carries the
# `stream` combinators the tests build on.
futures-util = "0.3"
# Isolated per-test scratch directories for the migrate integration tests
# (declare -> migrate -> change -> migrate loop reads and writes JSON files,
# so each test needs its own dir to stay independent of test order).
tempfile = "3"
# tokio macros enable #[tokio::test] for async tests; rt is the runtime.
# `sync` carries tokio::sync::OnceCell, which the migrate integration tests
# use to boot App::build() exactly once across tokio::test cases that share
# the same process.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
# tower::ServiceExt::oneshot drives a single synthetic request through the
# merged axum::Router in `tests/plugin_contract.rs` so the plugin-routes-
# mount-under-the-app-router check doesn't need a real TCP listener.
tower = { version = "0.5", features = ["util"] }
# Test-only: a tracing Layer that counts sqlx query events, so the ORM's
# no-N+1 guarantees are proven by COUNTING executed statements (and
# showing the count stays flat as row counts grow), not by structural
# inference alone. Powers the query-count proof harness.
tracing-subscriber = "0.3"
# http::Request / Response shape for the same oneshot path. axum re-exports
# the types but the trait bound on `oneshot` wants the concrete `http::*`
# types, so a direct dev-dep keeps the call site short.
http = "1"
http-body-util = "0.1"
# umbral (the facade) is needed in tests/ because #[derive(Model)] emits
# `::umbral::orm::*` paths and those have to resolve at the integration-test
# layer. Dev-dep only — doesn't propagate to release builds, so the
# umbral-core → umbral arrow this introduces (alongside the release-time
# umbral → umbral-core arrow) is a non-cycle by Cargo's rules.
umbral = { path = "../umbral" }
