[package]
name = "umbral-testing"
description = "Test helpers for umbral apps: TestClient, temp pools, response assertions, and model factories (factory_boy-style)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# Explicitly publishable: this is a user-facing crate that downstream apps
# dev-depend to write tests (TestClient + the Factory layer). `true` is the
# default, but we set it so it's never mistaken for internal-only scaffolding.
publish = true

[dependencies]
umbral = { path = "../umbral", version = "0.0.2" }
axum = "0.8"
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "runtime-tokio"] }
tempfile = "3"
# Factory layer (feature #79): realistic fake data + an async factory trait.
fake = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
