[package]
name = "umbra-derive-demo"
version = "0.1.0"
edition = "2024"
description = "Standalone umbra example: #[derive(Model)] on a custom user-defined model, served over HTTP."
license = "MIT OR Apache-2.0"

[dependencies]
umbra = { path = "../../crates/umbra" }
# REST plugin: auto-generates JSON CRUD over every registered model.
# Same Article data, two surfaces (HTML + JSON), zero per-model
# serializer code.
umbra-rest = { path = "../../plugins/umbra-rest" }
umbra-openapi = { path = "../../plugins/umbra-openapi" }
umbra-admin = {path = "../../plugins/umbra-admin"}
umbra-auth = {path = "../../plugins/umbra-auth"}
# umbra-cli's library surface exposes the `dispatch(app)` entry point
# that routes argv to plugin-contributed subcommands (createsuperuser
# from umbra-auth, etc.) or falls through to the built-in `serve` /
# `migrate` / `makemigrations` set.
umbra-cli = { path = "../../crates/umbra-cli" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# `App::serve` logs the bound address through `tracing::info!`. Installing a
# subscriber here turns that into visible stdout so an operator can see the
# server is up. Mirrors the choice in umbra-cli for the same reason.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
