[package]
name = "umbra-hello"
version = "0.1.0"
edition = "2024"
description = "Minimal umbra hello-world example."
license = "MIT OR Apache-2.0"

[dependencies]
umbra = { path = "../../crates/umbra" }
umbra-cli = { path = "../../crates/umbra-cli" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# For the benchmark model: serde derives + a sqlx pool for the bench table.
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
