[package]
name = "shop"
version = "0.1.0"
edition = "2024"

[dependencies]

# ----- Framework core (always required) ------------------------------------
umbral         = { path = "../../crates/umbral" }
umbral-cli     = { path = "../../crates/umbral-cli" }

# ----- Active by default ---------------------------------------------------
umbral-auth     = { path = "../../plugins/umbral-auth" }
umbral-sessions = { path = "../../plugins/umbral-sessions" }
umbral-admin    = { path = "../../plugins/umbral-admin" }
umbral-rest     = { path = "../../plugins/umbral-rest" }
# NOTE: not on crates.io yet — 0.0.7 shipped before this plugin existed. Path dep only.
umbral-graphql  = { path = "../../plugins/umbral-graphql" }
umbral-openapi  = { path = "../../plugins/umbral-openapi" }

# ----- Available built-ins (uncomment + register in main.rs to enable) -----
umbral-playground   = { path = "../../plugins/umbral-playground" }
# umbral-tasks        = { path = "../../plugins/umbral-tasks" }
umbral-permissions  = { path = "../../plugins/umbral-permissions" }
# umbral-rls          = { path = "../../plugins/umbral-rls" }
# umbral-cache        = { path = "../../plugins/umbral-cache" }
# umbral-email        = { path = "../../plugins/umbral-email" }
# umbral-signals      = { path = "../../plugins/umbral-signals" }
umbral-storage      = { path = "../../plugins/umbral-storage" }
umbral-security     = { path = "../../plugins/umbral-security" }
# Observability init helper. `otel` feature on so the shop demonstrates the
# full OpenTelemetry OTLP trace-export path (set OTEL_EXPORTER_OTLP_ENDPOINT
# to point at a collector; without one it degrades to logs only).
umbral-logs         = { path = "../../plugins/umbral-logs", features = ["otel"] }

# ----- Third-party + framework runtime deps --------------------------------
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Used by the demo seed for Order.public_id. ecommerce transitively
# depends on it, but a direct dep here lets main.rs name `uuid::Uuid`
# without going through the plugin re-export path.
uuid = { version = "1", features = ["v4"] }
# Required when writing a custom `Authentication` impl (the trait
# uses `async fn` desugared through `async-trait`).
async-trait = "0.1"

# ----- Project plugins -----------------------------------------------------
content = { path = "plugins/content" }
ecommerce = { path = "plugins/ecommerce" }

[dev-dependencies]
# Only for the connection-cost / WAL benchmark controls under examples/.
axum = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
