[package]
name = "umbra-auth"
description = "Authentication plugin for umbra: User model, argon2 password hashing, login helpers."
# The umbra workspace lives at crates/Cargo.toml (the repo root deliberately
# has no Cargo.toml so the tree can also hold docs + example apps). Plugins
# live at `plugins/<name>/`, which is a sibling of `crates/`, so cargo's
# upward walk can't find the workspace on its own — point at it explicitly.
workspace = "../../crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# The umbra facade. Plugin crates depend on the facade only, never on
# umbra-core internals.
umbra = { path = "../../crates/umbra", version = "0.0.1" }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
# clap for the `createsuperuser` management command — Plugin::commands()
# returns a Vec<Box<dyn PluginCommand>>, and each command exposes a
# clap::Command for arg parsing.
clap = "4"
# async-trait for the PluginCommand impl. The trait itself is async in
# `umbra::cli`, made object-safe via async-trait's Pin<Box<...>>
# desugaring.
async-trait = "0.1"
# rpassword for the password prompt without echo.
rpassword = "7"
# axum-core for FromRequestParts (the LoggedIn<U> extractor).
axum-core = "0.5"
# axum proper for middleware::from_fn (LoginRequiredLayer).
axum = "0.8"
# http for Parts, HeaderMap, Uri in the extractor and middleware.
http = "1"
# SHA-256 to hash session tokens before the DB lookup. Historically
# umbra-auth re-implemented this because of the now-flipped dep
# arrow; today it's a peer of the umbra-sessions implementation.
sha2 = "0.10"
# tower for the Layer + Service impl on LoginRequiredLayer so it works
# directly with Router::layer(...).
tower = "0.5"
# Cryptographic RNG + URL-safe base64 for opaque bearer-token
# generation. sha2 is already in the dep list (used by the session
# token hashing helper) and is re-used to hash the bearer key.
rand = "0.8"
base64 = "0.22"
# tracing::warn! on best-effort failures (last_login bump, etc.).
tracing = "0.1"
# umbra-sessions provides the session-table + cookie primitives.
# The dep arrow used to run sessions -> auth (sessions had user-
# aware helpers); after the de-coupling those helpers live here,
# calling into umbra-sessions for the row + cookie primitives. No
# cycle: sessions is now user-agnostic.
umbra-sessions = { path = "../umbra-sessions", version = "0.0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tempfile = "3"
# Test helpers for the login_required tests.
axum = "0.8"
http = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
