[package]
name = "umbra-email"
description = "SMTP + template-driven transactional email for umbra."
workspace = "../../crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
umbra = { path = "../../crates/umbra", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tracing = "0.1"
# SMTP transport. `lettre` is the standard Rust SMTP client. Use the
# tokio runtime variant; rustls so the build doesn't need OpenSSL
# system libs.
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
    "ring",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tempfile = "3"
